add & update run scripts + configs

--- a/O2/ssbarconfig.json
+++ b/O2/ssbarconfig.json
@@ -4,162 +4,190 @@
         "rct-path": "RCT\/Info\/RunInformation",
         "orbit-reset-path": "CTP\/Calib\/OrbitReset",
         "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "isRun2MC": "false"
+        "isRun2MC": "-1"
     },
     "bc-selection-task": {
-        "triggerBcShift": "999",
         "processRun2": "false",
         "processRun3": "true"
     },
-    "lambdakzero-preselector": {
-        "dIfMCgenerateK0Short": "true",
-        "dIfMCgenerateLambda": "true",
-        "dIfMCgenerateAntiLambda": "true",
-        "dIfMCgenerateGamma": "false",
-        "dIfMCgenerateHypertriton": "false",
-        "dIfMCgenerateAntiHypertriton": "false",
-        "dIfMCselectV0MotherPDG": "0",
-        "dIfMCselectPhysicalPrimary": "true",
-        "ddEdxPreSelectK0Short": "false",
-        "ddEdxPreSelectLambda": "true",
-        "ddEdxPreSelectAntiLambda": "true",
-        "ddEdxPreSelectGamma": "false",
-        "ddEdxPreSelectHypertriton": "false",
-        "ddEdxPreSelectAntiHypertriton": "false",
-        "ddEdxPreSelectionWindow": "7",
-        "dTPCNCrossedRows": "50",
-        "dPreselectOnlyBaryons": "false",
-        "processBuildAll": "true",
-        "processBuildMCAssociated": "false",
-        "processBuildValiddEdx": "false",
-        "processBuildValiddEdxMCAssociated": "false",
-        "processSkipV0sNotUsedInCascades" : "true"
+    "tracks-extra-v002-converter": {
+        "processV000ToV002": "false",
+        "processV001ToV002": "true"
     },
-    "lambdakzero-builder": {
-        "d_UseWeightedPCA": "false",
-        "d_UseAutodetectMode": "true",
+    "eventselection-run3": {
+        "timestamp": {
+            "verbose": "false",
+            "fatalOnInvalidTimestamp": "false",
+            "rct-path": "RCT\/Info\/RunInformation",
+            "orbit-reset-path": "CTP\/Calib\/OrbitReset",
+            "isRun2MC": "-1"
+        },
+        "bcselOpts": {
+            "amIneeded": "-1",
+            "triggerBcShift": "0",
+            "ITSROFrameStartBorderMargin": "-1",
+            "ITSROFrameEndBorderMargin": "-1",
+            "TimeFrameStartBorderMargin": "-1",
+            "TimeFrameEndBorderMargin": "-1",
+            "checkRunDurationLimits": "false",
+            "maxInactiveChipsPerLayer": {
+                "values": [
+                    "8",
+                    "8",
+                    "8",
+                    "111",
+                    "111",
+                    "195",
+                    "195"
+                ]
+            },
+            "NumberOfOrbitsPerTF": "-1"
+        },
+        "evselOpts": {
+            "amIneeded": "-1",
+            "muonSelection": "0",
+            "maxDiffZvtxFT0vsPV": "1",
+            "isMC": "-1",
+            "confSigmaBCforHighPtTracks": "4",
+            "TimeIntervalForOccupancyCalculationMin": "-40",
+            "TimeIntervalForOccupancyCalculationMax": "100",
+            "TimeRangeVetoOnCollStandard": "10",
+            "TimeRangeVetoOnCollNarrow": "2",
+            "FT0CamplPerCollCutVetoOnCollInTimeRange": "8000",
+            "FT0CamplPerCollCutVetoOnCollInROF": "5000",
+            "EpsilonVzDiffVetoInROF": "0.300000012",
+            "UseWeightsForOccupancyEstimator": "true",
+            "NumberOfOrbitsPerTF": "-1",
+            "TestAlternativeBcMatching": "0",
+            "TestModifyTimeVetoOnNearbyColl": "0",
+            "TestVetoOnTRDinPast": "0",
+            "TestVzDiffNsigma": "3",
+            "TestVzDiffMargin": "0.200000003"
+        },
+        "lumiOpts": {
+            "amIneeded": "-1"
+        },
+        "ccdburl": "http:\/\/alice-ccdb.cern.ch"
+    },
+    "propagation-service": {
+        "ccdburl": "http:\/\/alice-ccdb.cern.ch",
+        "ccdb": {
+            "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
+            "lutPath": "GLO\/Param\/MatLUT",
+            "grpmagPath": "GLO\/Config\/GRPMagField",
+            "mVtxPath": "GLO\/Calib\/MeanVertex"
+        },
+        "v0BuilderOpts": {
+            "generatePhotonCandidates": "false",
+            "moveTPCOnlyTracks": "true",
+            "minCrossedRows": "50",
+            "dcanegtopv": "0.05",
+            "dcapostopv": "0.05",
+            "v0cospa": "0.9876",
+            "dcav0dau": "0.5",
+            "v0radius": "0.55",
+            "maxDaughterEta": "0.8",
+            "mc_populateV0MCCoresSymmetric": "false",
+            "mc_populateV0MCCoresAsymmetric": "true",
+            "mc_treatPiToMuDecays": "true",
+            "mc_rapidityWindow": "1.0",
+            "mc_keepOnlyPhysicalPrimary": "false",
+            "mc_addGeneratedK0Short": "true",
+            "mc_addGeneratedLambda": "true",
+            "mc_addGeneratedAntiLambda": "true",
+            "mc_addGeneratedGamma": "false",
+            "mc_addGeneratedGammaMakeCollinear": "true",
+            "mc_findableDetachedV0": "false"
+        },
+        "cascadeBuilderOpts": {
+            "useCascadeMomentumAtPrimVtx": "false",
+            "minCrossedRows": "50",
+            "dcabachtopv": "0.04",
+            "cascradius": "1.01",
+            "casccospa": "0.99",
+            "dcacascdau": "0.25",
+            "lambdaMassWindow": "0.0116",
+            "maxDaughterEta": "0.8",
+            "kfTuneForOmega": "false",
+            "kfConstructMethod": "2",
+            "kfUseV0MassConstraint": "true",
+            "kfUseCascadeMassConstraint": "false",
+            "kfDoDCAFitterPreMinimV0": "true",
+            "kfDoDCAFitterPreMinimCasc": "true",
+            "mc_populateCascMCCoresSymmetric": "false",
+            "mc_populateCascMCCoresAsymmetric": "true",
+            "mc_addGeneratedXiMinus": "true",
+            "mc_addGeneratedXiPlus": "true",
+            "mc_addGeneratedOmegaMinus": "true",
+            "mc_addGeneratedOmegaPlus": "true",
+            "mc_treatPiToMuDecays": "true",
+            "mc_rapidityWindow": "1.0",
+            "mc_keepOnlyPhysicalPrimary": "false",
+            "mc_findableDetachedCascade": "false"
+        },
+        "trackPropagation": {
+            "minPropagationDistance": "5."
+        },
+        "processRealData": "true",
+        "processMonteCarlo": "false"
+    },
+    "mult-cent-table": {
         "processRun2": "false",
-        "processRun3": "true"
-    },
-    "event-selection-task": {
-        "syst": "pp",
-        "muonSelection": "0",
-        "customDeltaBC": "-1",
-        "isMC": "false",
-        "processRun2": "false",
-        "processRun3": "true"
-    },
-    "multiplicity-table": {
-        "doVertexZeq": "1",
-        "processRun2": "false",
-        "processRun3": "true", 
-        "fractionOfEvents" : "2", 
-        "populateMultExtra" : "0"
-    },
-    "tpc-pid": {
-        "param-file": "",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TPC\/Response",
-        "recoPass": "",
-        "ccdb-timestamp": "0",
-        "useNetworkCorrection": "false",
-        "autofetchNetworks": "true",
-        "skipTPCOnly": "true",
-        "networkPathLocally": "network.onnx",
-        "enableNetworkOptimizations": "true",
-        "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
-        "networkSetNumThreads": "0",
-        "pid-el": "-1",
-        "pid-mu": "-1",
-        "pid-pi": "-1",
-        "pid-ka": "-1",
-        "pid-pr": "-1",
-        "pid-de": "-1",
-        "pid-tr": "-1",
-        "pid-he": "-1",
-        "pid-al": "-1"
-    },
-    "tpc-pid-full": {
-        "param-file": "",
-        "ccdb-url": "http:\/\/alice-ccdb.cern.ch",
-        "ccdbPath": "Analysis\/PID\/TPC\/Response",
-        "recoPass": "",
-        "ccdb-timestamp": "0",
-        "useNetworkCorrection": "false",
-        "autofetchNetworks": "true",
-        "skipTPCOnly": "true",
-        "networkPathLocally": "network.onnx",
-        "networkPathCCDB": "Analysis\/PID\/TPC\/ML",
-        "enableNetworkOptimizations": "true",
-        "networkSetNumThreads": "0",
-        "pid-el": "-1",
-        "pid-mu": "-1",
-        "pid-pi": "-1",
-        "pid-ka": "-1",
-        "pid-pr": "-1",
-        "pid-de": "-1",
-        "pid-tr": "-1",
-        "pid-he": "-1",
-        "pid-al": "-1"
-    },
-    "cascade-preselector": {
-        "dIfMCgenerateXiMinus": "true",
-        "dIfMCgenerateXiPlus": "true",
-        "dIfMCgenerateOmegaMinus": "true",
-        "dIfMCgenerateOmegaPlus": "true",
-        "dIfMCselectV0MotherPDG": "0",
-        "dIfMCselectPhysicalPrimary": "true",
-        "ddEdxPreSelectXiMinus": "true",
-        "ddEdxPreSelectXiPlus": "true",
-        "ddEdxPreSelectOmegaMinus": "true",
-        "ddEdxPreSelectOmegaPlus": "true",
-        "ddEdxPreSelectionWindow": "7",
-        "dTPCNCrossedRows": "50",
-        "dPreselectOnlyBaryons": "false",
-        "processBuildAll": "true",
-        "processBuildMCAssociated": "false",
-        "processBuildValiddEdx": "false",
-        "processBuildValiddEdxMCAssociated": "false"
-    },
-    "cascade-builder": {
-        "d_UseWeightedPCA": "false",
-        "d_UseAutodetectMode": "true",
-        "processRun2": "false",
-        "processRun3": "true"
-    },
-    "lambdakzero-label-builder": {
-        "processDoNotBuildLabels": "true",
-        "processBuildV0Labels": "false"
-    },
-    "cascade-analysis": {
-        "tpcNsigmaBachelor": "4",
-        "tpcNsigmaProton": "4",
-        "tpcNsigmaPion": "4",
         "processRun3": "true",
-        "processRun2": "false",
-        "processRun3VsMultiplicity": "false",
-        "processRun2VsMultiplicity": "false",
-        "processRun3WithPID": "false",
-        "processRun2WithPID": "false",
-        "processRun3VsMultiplicityWithPID": "false",
-        "processRun2VsMultiplicityWithPID": "false"
+        "processRun3WithGlobalCounters": "false",
+        "processMFT": "false",
+        "processMonteCarlo": "false",
+        "processMonteCarlo2Mults": "false",
+        "processCentralityRun2": "false",
+        "processCentralityRun3": "true"
+    },
+    "pid-tpc-service": {
+        "processTracks": "false",
+        "processTracksMC": "false",
+        "processTracksIU": "true",
+        "processTracksMCIU": "false"
     },
     "cascade-selector": {
-        "tpcNsigmaBachelor": "3",
-        "tpcNsigmaProton": "3",
-        "tpcNsigmaPion": "3",
-        "minTPCCrossedRows": "80",
+        "processRecData": "true",
+        "processRecMC": "false",
+        "processGenMC": "false",
+        "ccdbUrl": "http:\/\/alice-ccdb.cern.ch",
+        "useTrigger": "false",
+        "triggerList": "fDoubleXi, fDoubleOmega, fOmegaXi",
+        "doTFBorderCut": "true",
+        "doSel8": "true",
+        "tpcNsigmaBachelor": "5",
+        "tpcNsigmaProton": "5",
+        "tpcNsigmaPion": "5",
+        "minTPCCrossedRows": "50",
         "minITSClusters": "0",
-        "v0setting_cospa": "0.99499999999999996",
-        "v0setting_dcav0dau": "1",
-        "v0setting_dcapostopv": "0.100000001",
-        "v0setting_dcanegtopv": "0.100000001",
-        "v0setting_radius": "0.899999976",
-        "cascadesetting_cospa": "0.94999999999999996",
-        "cascadesetting_dcacascdau": "1",
-        "cascadesetting_dcabachtopv": "0.05",
-        "cascadesetting_cascradius": "0.9",
-        "cascadesetting_v0masswindow": "0.00999999978",
-        "cascadesetting_mindcav0topv": "0.00999999978"
+        "etaTracks": "0.8",
+        "etaCascades": "0.8",
+        "v0setting_cospa": "0.9876",
+        "v0setting_dcav0dau": "0.05",
+        "v0setting_dcapostopv": "0.04",
+        "v0setting_dcanegtopv": "0.06",
+        "v0setting_radius": "0.55",
+        "cascadesetting_cospa": "0.9947",
+        "cascadesetting_dcacascdau": "0.25",
+        "cascadesetting_dcabachtopv": "0.04",
+        "cascadesetting_cascradius": "1.01",
+        "cascadesetting_v0masswindow": "0.0116",
+        "cascadesetting_mindcav0topv": "0.03"
+    },
+    "cascade-correlations": {
+        "maxRapidity": "1.0",
+        "useTrigger": "false",
+        "triggerList": "fDoubleXi, fDoubleOmega, fOmegaXi",
+        "doTFBorderCut": "true",
+        "doSel8": "true",
+        "processSameEvent": "true",
+        "processMixedEvent": "true",
+        "processMC": "false",
+        "zVertexCut": "10", 
+        "nMixedEvents": "100",
+        "doEfficiencyCorrection": "true",
+        "ccdbUrl": "http:\/\/alice-ccdb.cern.ch",
+        "efficiencyCCDBPath": "Users\/r\/rspijker\/2D\/24j1"
     }
 }
